--- a/styles/project.css
+++ b/styles/project.css
@@ -249,7 +249,7 @@ li a:hover{
     width: 85%;
     margin: auto;
     height: 100%;
-    margin-bottom: 8rem;
+    margin-bottom: 5rem;
     margin-top: 6rem;
    }
 
@@ -560,7 +560,7 @@ li a:hover{
     #footer{
       flex-direction: column;
       justify-content: space-around;
-      margin-top: 10rem;
+      margin-top: 5rem;
     }
     
     #addressBox{
